# cpp-calculator

./: README.md
src/: CMakeLists.txt  Makefile  qcustomplot.h
src/controller/: CalculationController.cc  CalculationController.h  CreditController.cc  CreditController.h
src/docs/: Doxyfile
src/model/: CalculationModel.cc  CalculationModel.h  CreditModel.cc  CreditModel.h
src/tests/: test_calculationmodel.cc  test_creditmodel.cc
src/view/: form.cc  form.h  form.ui  loancalc.cc  loancalc.h  loancalc.ui  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  plot.cc  plot.h  plot.ui
